<resources>
    <string name="app_name">Fortune Farm</string>
    <array name="category">
        <item>Choose Category</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Dary products</item>
        <item>Groceries</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selling_area">Selling area</string>
    <string name="adviser_area">Adviser area</string>
    <string name="first">First</string>
    <string name="logout">Logout</string>
    <string name="signup">SignUp</string>
    <string name="signup_btn">Signup</string>
    <string name="person_s_name">person\'s name</string>
    <string name="farma">Farma</string>
    <string name="email">Email</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_here">Login here.</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="register">Register?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here.</string>
    <string name="last_name">Last name :</string>
    <string name="sign_up">Sign Up</string>
    <string name="string_sign_up" />
    <string name="phone_number">Phone Number :</string>
    <string name="enter_email_id">Enter Email id</string>
    <string name="first_name">First Name :</string>
    <string name="confirm_password">Confirm password :</string>
    <string name="are_you_a_farmer_or_user">Are you a Farmer or Customer?</string>
    <string name="farmer">Farmer</string>
    <string name="or">Or</string>
    <string name="customer">Customer</string>
    <string name="enter_email_id_login">Enter Email Id</string>
    <string name="DB_farmer">FARMER</string>
    <string name="buy">Buy</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="sell">Sell</string>
    <string name="select_category">Select Category</string>
    <string name="update">Update</string>

</resources>