<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ceopblur"
    android:orientation="vertical"
    tools:context=".LaunchPage">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="10dp"
       android:gravity="center"
       android:layout_marginTop="200dp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/are_you_a_farmer_or_user"
           android:textColor="@color/black"
           android:textSize="20sp"
           android:textStyle="bold"
           />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
       >

        <Button
            android:id="@+id/btn_farmer"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:text="@string/farmer"
            android:textColor="@color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer"
            android:textColor="@color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/login_here1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_here"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="265dp"
            tools:layout_editor_absoluteY="564dp" />
    </LinearLayout>
</LinearLayout>